[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deliriumviz"
version = "0.1.0"
description = "Visualization of rail adjustment heatmaps from delay line daily calibrations"
authors = [
  { name = "Juan P. Gil", email = "juanpablo.gil@eso.org" }
]
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"

dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.7",
  "numpy>=1.25",
  "streamlit>=1.35"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deliriumviz*"]   